--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^3.3.7",
     "griddle-react": "^1.9.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
